fix: unset max height on mobile

--- a/packages/shared/src/components/notifications/Toast.module.css
+++ b/packages/shared/src/components/notifications/Toast.module.css
@@ -3,6 +3,7 @@
   transform: translate(-50%, 5rem);
   transition: transform 0.14s ease-in-out;
   max-width: calc(100vw - 2rem);
+  max-height: unset;
   width: 100%;
   bottom: 4rem;
 
